# kwinshot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh
data/: net.local.kwinshot.desktop
src/: main.cpp
